<resources>
    <string name="app_name">Swathi Agency</string>
    <string name="orders">Orders</string>
    <string name="view_reports">View Reports</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add">Add</string>
    <string name="pick_a_customer">Pick a customer</string>
    <string name="backup_sync">Backup &amp; Sync</string>
    <string name="order_page">Order Page</string>
    <string name="collection">Collection</string>
    <string name="pending">Pending</string>
    <string name="search_an_item">Search an item</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_route">Customer Route</string>
    <string name="_0000">0000</string>
    <string name="create_order">Create Order</string>
    <string name="search_category">Search by category</string>
    <string name="total_bill_amount">Total Bill Amount :</string>
    <string name="enter_starting_bill_number">Enter starting bill number</string>
    <string name="bill_number">Bill number</string>
    <string name="please_enter_starting_bill_number">Please enter starting bill number</string>
    <string name="search_by_route">Search by route</string>
    <string name="mrp">MRP : </string>
    <string name="available">Available :</string>
    <string name="box">Box</string>
    <string name="pcs">Pcs</string>
    <string name="total">Total : </string>
    <string name="rs">Rs.</string>
    <string name="select_salesman">Select salesman</string>
    <string name="menu">Menu</string>
    <string name="filter_by_customer_name">By customer name</string>
    <string name="filter_by_customer_route">By route</string>
    <string name="item_name">Item name</string>
    <string name="box_ordered">Box ordered</string>
    <string name="pcs_ordered">Pcs Ordered</string>
    <string name="item_total">Item Total</string>
    <string name="backup_orders_itc">Backup ITC orders</string>
    <string name="route">Route :</string>
    <string name="backup_orders_avt">Backup AVT orders\n</string>
    <string name="view_orders">View Orders</string>
    <string name="search_by_name">Search by Name</string>
    <string name="all_orders_have_been_backed_up">All orders have been backed up.</string>
    <string name="backup_all_orders">Backup all orders</string>
    <string name="backup_orders">Backup Orders</string>
</resources>