<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/backup_itc"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/backup_orders_itc"
        app:itemIconSize="20dp"
        android:textSize="12sp"/>

    <item
        android:id="@+id/backup_avt"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/backup_orders_avt"
        app:itemIconSize="20dp"
        android:textSize="12sp"/>

    <item
        android:id="@+id/view_orders"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/view_orders"
        app:itemIconSize="20dp"
        android:textSize="12sp"/>
</menu>