<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.OrderedItemsActivity">

    <LinearLayout
        android:id="@+id/ll_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rv_ordered_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/item_name"
            android:textStyle="bold" />

        <!-- Column 2 Heading -->
        <TextView
            android:id="@+id/tv_box_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/box_ordered"
            android:textStyle="bold" />

        <!-- Column 2 Heading -->
        <TextView
            android:id="@+id/tv_pcs_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/pcs_ordered"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/item_total"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ordered_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/ll_order_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_heading"
        tools:layout="@layout/layout_ordered_item"/>

    <LinearLayout
        android:id="@+id/ll_order_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_ordered_items"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill_amount"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_ordered_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0000"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_order_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_order_total">

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/cancel"
            android:textSize="14sp" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/btn_complete_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/complete" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>