<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_corner_black_border"
    android:paddingBottom="10dp"
    android:id="@+id/cl_item_main">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:hint="@string/dummy_text"
        android:padding="2dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mrp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name" />

    <TextView
        android:id="@+id/tv_item_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rs"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_mrp"
        app:layout_constraintTop_toBottomOf="@id/item_name" />

    <TextView
        android:id="@+id/tv_item_mrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/_0000"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_item_rs"
        app:layout_constraintTop_toBottomOf="@id/item_name" />

    <TextView
        android:id="@+id/tv_available_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/available"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_item_mrp"
        app:layout_constraintTop_toBottomOf="@id/item_name"/>

    <TextView
        android:id="@+id/tv_available_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:hint="@string/_0000"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_available_text"
        app:layout_constraintTop_toBottomOf="@id/item_name"/>

    <LinearLayout
        android:id="@+id/ll_box_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/ll_pcs_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_mrp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/box"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner_black_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_decrement_box"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_minus"
                android:padding="4dp"
                app:elevation="10dp" />

            <EditText
                android:id="@+id/et_count_value_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:minWidth="30dp"
                android:minHeight="30dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_increment_box"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_add_black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pcs_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/ll_item_total_amount"
        app:layout_constraintStart_toEndOf="@id/ll_box_count"
        app:layout_constraintTop_toBottomOf="@id/tv_item_mrp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pcs"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner_black_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_decrement_pcs"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_minus" />

            <EditText
                android:id="@+id/et_count_value_pcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:minWidth="30dp"
                android:minHeight="30dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_increment_pcs"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_add_black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_total_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_pcs_count"
        app:layout_constraintTop_toBottomOf="@id/tv_item_mrp"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_total_rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/rs"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_item_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/_0000"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>