<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CompanyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lv_category_loading"
            android:layout_width="200dp"
            android:layout_height="120dp"
            app:lottie_rawRes="@raw/loading_anim"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            tools:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_create_order"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/create_order"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_bill_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_create_order"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="start"
                    android:text="@string/total_bill_amount"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"/>

                <TextView
                    android:id="@+id/tv_rupees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="@string/rs"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="end"/>

                <TextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/_0000"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>
            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/search_category_dropdown"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:padding="12dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/search_category"
                app:layout_constraintTop_toBottomOf="@id/ll_bill_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_black_border"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_category_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/search_category_dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ll_confirm_cancel_order"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                tools:layout="@layout/layout_category_items"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lv_category_item_loading"
                android:layout_width="200dp"
                android:layout_height="120dp"
                app:lottie_rawRes="@raw/loading_anim"
                app:lottie_loop="true"
                app:lottie_autoPlay="false"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/search_category_dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/ll_confirm_cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:weightSum="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_cancel_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="@string/cancel"
                    android:textSize="14sp"/>

                <androidx.legacy.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"/>

                <Button
                    android:id="@+id/btn_complete_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/complete"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>